# AI-Research-Agent-Platform

./: .antigravityrules  .gitignore  A_to_B.diff  README.md  docker-compose.dev.yml  docker-compose.yml
.agents/: rules.md  rules.md.disabled
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agent/: graph.py  state.py
backend/app/api/: dependencies.py
backend/app/api/routes/: chat.py  documents.py  health.py
backend/app/core/: config.py  constants.py  security.py
backend/app/schemas/: chat.py  document.py
backend/app/workers/: tasks.py
backend/mcp_server/: server.py
backend/tests/: conftest.py
backend/tests/integration/: test_health.py
backend/tests/unit/: test_security.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatArea.tsx  LeftSidebar.tsx  Navbar.tsx  RightSidebar.tsx
frontend/src/components/chat/: ChatArea.tsx  ChatSidebar.tsx
frontend/src/components/documents/: KnowledgeBase.tsx  KnowledgeBaseSidebar.tsx
frontend/src/components/ui/: Navbar.tsx
frontend/src/types/: chat.ts  document.ts
project_memory/: PRD.md  mom_test_notes.md  mom_test_summary.md  uv_migration_log.md
