[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docmind-backend"
version = "0.1.0"
description = "DocMind – AI Research Agent Platform backend"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # Validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Agent / AI
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-google-genai>=1.0.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    # MCP
    "mcp>=1.0.0",
    # Supabase
    "supabase>=2.5.0",
    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    # PDF / text extraction
    "PyMuPDF>=1.24.0",
    # Evaluation
    "ragas>=0.1.0",
    # Utilities
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "black>=24.4.0",
    "pip-audit>=2.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.coverage.report]
fail_under = 80
